--- a/ChampionMains.Pyrobot.WebJob/packages.config
+++ b/ChampionMains.Pyrobot.WebJob/packages.config
@@ -1,27 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.Azure.WebJobs" version="1.1.2" targetFramework="net45" />
-  <package id="Microsoft.Azure.WebJobs.Core" version="1.1.2" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net45" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net452" />
+  <package id="Microsoft.Azure.WebJobs" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.WebJobs.Core" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.3" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net452" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net45" />
-  <package id="MingweiSamuel.Camille" version="1.0.1-nightly-2018-02-14-46cb1f9a6e" targetFramework="net452" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.1.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net452" />
+  <package id="MingweiSamuel.Camille" version="1.0.1-nightly-2018-02-15-13088e0cc4" targetFramework="net452" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
-  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net452" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net452" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net452" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
@@ -44,14 +45,14 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net45" />
+  <package id="System.Spatial" version="5.8.3" targetFramework="net452" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
-  <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="9.0.0" targetFramework="net452" />
 </packages>
