--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -4,7 +4,11 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="BundleTransformer.Core" version="1.10.0" targetFramework="net452" />
   <package id="BundleTransformer.SassAndScss" version="1.10.0" targetFramework="net452" />
+  <package id="BundleTransformer.TypeScript" version="1.10.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Core" version="3.0.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8" version="3.0.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8.Native.win-x86" version="3.0.0" targetFramework="net452" />
   <package id="LibSassHost" version="1.2.2" targetFramework="net452" />
   <package id="LibSassHost.Native.win-x86" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
