--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -398,6 +398,7 @@
     <Content Include="node_modules\material-design-lite\src\typography\_typography.scss" />
     <Content Include="node_modules\material-design-lite\src\tooltip\_tooltip.scss" />
     <Content Include="node_modules\mdl-ext\src\color-themes\_color-themes.scss" />
+    <Content Include="content\js\allSkins.js" />
     <None Include="Properties\PublishProfiles\championmains-pyrobot - Web Deploy.pubxml" />
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Views\Web.config" />
